Refactor: 테스트 코드 공통 메소드 분리 setUp() 설정
- 공통적으로 사용되는 샘플 데이터 생성 코드를 SchedulesBaseTest.java 파일로 분리
- @BeforeEach 어노테이션 붙은 setUp() 메소드로 코드 중복 제거